<?xml version="1.0"?>
<package>
  <name>dynamixel_control_hw</name>
  <version>0.1.0</version>
  <description>An interface to the Dynamixel actuators for ROS control</description>

  <maintainer email="dorian.goepp@inria.fr">Dorian Goepp</maintainer>

  <license>CeCILL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>combined_robot_hw</build_depend>
  <build_depend>controller_manager</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
    <hardware_interface plugin="${prefix}/dynamixel_plugins.xml"/>
  </export>
</package>
